# NCLI

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh
include/: CLI.h  Colors.h  Command.h  Config.h  Prompt.h
single-header/: NCLI.h
src/: main.cpp
tools/: bundle.py
